# termux-gui-package

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  manifest.json  postinst
icons/distro-icons/: LICENSES
man/: termux-gui-shell.1
scripts/: termux-gui-dialog  termux-gui-dialog.in  termux-gui-dmenu.in  termux-gui-files  termux-gui-files.in  termux-gui-lockscreen-notes  termux-gui-lockscreen-notes.in  termux-gui-pkg  termux-gui-pkg.in  termux-gui-proot-distro.in  termux-gui-shell  termux-gui-shell.in  termux-gui-view  termux-gui-view.in
